#91 - Java 11 code style upgrades.
Made use of var where reasonable. Replaced Arrays.asList(…) with List.of(…).