@@ -20,7 +20,6 @@ import lombok.ToString;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -76,7 +75,7 @@ public class Order extends AbstractAggregateRoot {
 	 * @param items must not be {@literal null}.
 	 */
 	public Order(LineItem... items) {
-		this(Arrays.asList(items), null);
+		this(List.of(items), null);
 	}
 
 	Order() {
